--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,33 @@ img {
   width: 400px;
   height: 300px;
   float: left;
-  padding-right: 1em;
   border-width: 2px;
   border-style: groove;
   border-color: black;
+  border-radius: 400px;
+  columns: 3;
 }
 
 .header {
-  text-align: center;
-  text-emphasis: bold;
-  text-emphasis: underline;
+  text-align: left;
+  columns: 9;
 }
 
 .highlight  {
-  color: orangered;
+  color: slategray;
+}
+
+.html {
+  background-color: slategray;
+}
+
+#github {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.flex-grow  {
+  flex-grow: 1;
 }
