--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ img {
   columns: 3;
 }
 
-.header {
+.projects {
   text-align: left;
   columns: 9;
 }
@@ -25,10 +25,17 @@ img {
 #github {
   font-weight: 700;
   text-transform: uppercase;
-  text-decoration: none;
-  display: inline-block;
 }
 
 .flex-grow  {
   flex-grow: 1;
+}
+
+.profile #github::after {
+  content: '';
+    display: block;
+    width: 0;
+    height: 4px;
+    background: black;
+    transition: width .2s;
 }
