--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+.profile  {
+  text-align: left;
+  columns: 1;
+  color: none;
+  background-color: slategray;
+  padding: 15px;
+}
+
 img {
   width: 400px;
   height: 300px;
@@ -11,9 +19,15 @@ img {
 
 .projects {
   text-align: left;
-  columns: 9;
+  columns: 1;
 }
 
+.information  {
+  column-count: auto;
+  column-gap: 1em;
+  column-rule: 3em;
+  column-fill: auto;
+}
 .highlight  {
   color: slategray;
 }
