--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .profile  {
   text-align: left;
+  width: auto;
   columns: 1;
   color: none;
   background-color: slategray;
@@ -7,19 +8,23 @@
 }
 
 img {
-  width: 400px;
-  height: 300px;
+  width: 200px;
+  height: 150px;
   float: left;
   border-width: 2px;
   border-style: groove;
   border-color: black;
   border-radius: 400px;
-  columns: 3;
 }
 
 .projects {
-  text-align: left;
-  columns: 1;
+  width: 140px;
+  float: left;
+}
+
+.projcet-description  {
+  width: 500px;
+  float: right;
 }
 
 .information  {
@@ -27,13 +32,14 @@ img {
   column-gap: 1em;
   column-rule: 3em;
   column-fill: auto;
+  color: darkslategray;
 }
 .highlight  {
   color: slategray;
 }
 
 .html {
-  background-color: slategray;
+  background-color: rgb(55, 72, 88);
 }
 
 #github {
@@ -51,5 +57,12 @@ img {
     width: 0;
     height: 4px;
     background: black;
-    transition: width .2s;
+    transition: .2s ease-in-out;
+}
+
+#name {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 300;
+  font-size: 42px;
+  font-stretch: condensed;
 }
